Change documentclass to book, add package emptypage

--- a/notes-config.tex
+++ b/notes-config.tex
@@ -7,6 +7,8 @@
 % Using areaset from old arsclassica package
 \areaset[current]{370pt}{784pt}
 
+\usepackage{emptypage}
+
 % Used for split environment
 \usepackage{amsmath}
 
