--- a/notes.tex
+++ b/notes.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,headinclude,footinclude,BCOR5mm,numbers=noenddot,cleardoublepage=empty]{scrbook}
+\documentclass[a4paper,11pt]{book}
 
 \input{notes-config}
 
